review back end and frontend completed

--- a/angularapp1/src/app/adminreview/adminreview.component.html
+++ b/angularapp1/src/app/adminreview/adminreview.component.html
@@ -63,7 +63,7 @@
                 </div>
                 
                 <div class="client-comment">
-                    <p>{{rev.reviewComment}}</p>
+                    <p>{{rev.reviewComments}}</p>
                 </div>
                 
                 <button id="delete" (click)="delete()" ><i class='fas fa-trash'></i></button> 
