--- a/angularapp1/src/app/userreview/userreview.component.html
+++ b/angularapp1/src/app/userreview/userreview.component.html
@@ -62,7 +62,7 @@
                 </div>
                 
                 <div class="client-comment">
-                    <p>{{rev.reviewComment}}</p>
+                    <p>{{rev.reviewComments}}</p>
                 </div>
                 
                 <!-- <button id="delete" (click)="edit()" ><i class='fas fa-edit'></i></button>  -->
