adminreivew problem solved

--- a/angularapp1/src/app/adminreview/adminreview.component.html
+++ b/angularapp1/src/app/adminreview/adminreview.component.html
@@ -66,7 +66,7 @@
                     <p>{{rev.reviewComments}}</p>
                 </div>
                 
-                <button id="delete" (click)="delete()" ><i class='fas fa-trash'></i></button> 
+                <button id="delete" (click)="delete(rev.reviewId)" ><i class='fas fa-trash'></i></button> 
 
             </div>
             
