auto id for course institute student completed

--- a/angularapp1/src/app/addacademy/addacademy.component.html
+++ b/angularapp1/src/app/addacademy/addacademy.component.html
@@ -25,10 +25,10 @@
   <h5>Add Academy</h5><br>
   <div id="academyLeft">
   <div  id="academyName" >
-      <label>Enter Academy Id</label>
+      <!-- <label>Enter Academy Id</label>
       <input formControlName="instituteId" type="text" class="form-control" placeholder="Enter Academy Id"
       [(ngModel)]="institute.instituteId" name="instituteId"><br>
-      <small *ngIf="!addacademyform.get('instituteId').valid && addacademyform.get('instituteId').touched" class="text-danger">* Invalid Academy ID</small>
+      <small *ngIf="!addacademyform.get('instituteId').valid && addacademyform.get('instituteId').touched" class="text-danger">* Invalid Academy ID</small> -->
       <br>
       <label>Enter Academy Name</label>
       <input formControlName="instituteName" type="text" id="instituteName" [(ngModel)]="institute.instituteName" name="instituteName" placeholder="Enter the Academy Name" class="form-control"><br>
