--- a/angularapp1/src/app/pagenotfound/pagenotfound.component.css
+++ b/angularapp1/src/app/pagenotfound/pagenotfound.component.css
@@ -1,5 +1,5 @@
 .error{
-    background-image:url("error-404.png");
+    background-image:url("error.png");
     background-color:white;
     height: 100%;
     background-position: center;
