--- a/angularapp1/src/app/homepage/homepage.component.css
+++ b/angularapp1/src/app/homepage/homepage.component.css
@@ -1,111 +1,219 @@
-*{
-	margin: 0;
-	padding: 0;
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+* {
+	box-sizing: border-box;
 }
+.container{
+	background-image: url("dream.png");
+} 
 body{
-    padding: 0%;
-    height: 100vh;
-    width: 100vw;
-    position: fixed;
+	background-image: url("ac.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
 }
-header{
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-    font-size: 30px;
-	box-sizing:border-box;
-	background: rgba(0, 0, 0, 0);
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: 100vh;
+	margin: -20px 0 50px;
 }
-.main{
-	width: 1200px;
-	margin: auto;
-
+.navbar-brand{
+	font-size:x-large;
 }
-nav ul{
-	list-style:none;
-	float:left;
-    display: flex;
+h1 {
+	font-weight: bold;
 	margin: 0;
-	padding: 0;
+}
+#navtext:hover{
+	color:lightgray;
+	transition: all 0.3s ease;
+}
+h2 {
+	text-align: center;
+}
+.navbar {
+    margin-bottom: 0px;
+	height: 5%;
+	text-align: center;
+}
+p {
+	font-size: 14px;
+	font-weight: 100;
+	line-height: 20px;
+	letter-spacing: 0.5px;
+	margin: 20px 0 30px;
+}
+
+span {
+	font-size: 12px;
+}
+
+a {
+	color: #333;
+	font-size: 14px;
+	text-decoration: none;
+	margin: 15px 0;
+}
+
+button {
+	border-radius: 20px;
+	border: 1px solid #FF4B2B;
+	background-color: #FF4B2B;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 45px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	transition: transform 80ms ease-in;
+}
+
+button:active {
+	transform: scale(0.95);
+}
+
+button:focus {
+	outline: none;
+}
+
+button.ghost {
+	background-color: white;
+	color:#2a8d9a;
+	border-color: #FFFFFF;
+}
+button.ghost:hover{
+	background-color: #2a8d9a;
+	color:white;
+	border-color: #FFFFFF;
+}
+form {
+	background-color: #FFFFFF;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 50px;
+	height: 100%;
+	text-align: center;
+}
+
+input {
+	background-color: #eee;
+	border: none;
+	padding: 12px 15px;
+	margin: 8px 0;
+	width: 100%;
+}
+
+.container {
+	background-color: #fff;
+	border-radius: 10px;
+  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	position: relative;
+	overflow: hidden;
+	width: 768px;
+	max-width: 100%;
+	min-height: 480px;
+}
+
+.form-container {
+	position: absolute;
+	top: 0;
+	height: 100%;
+	transition: all 0.6s ease-in-out;
+}
+
+.sign-in-container {
+	left: 0;
+	width: 50%;
+	z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+	transform: translateX(100%);
+}
+
+.sign-up-container {
+	left: 0;
+	width: 50%;
+	opacity: 0;
+	z-index: 1;
+}
+
+.container.right-panel-active .sign-up-container {
+	transform: translateX(100%);
+	opacity: 1;
+	z-index: 5;
+	animation: show 0.6s;
+}
+
+@keyframes show {
+	0%, 49.99% {
+		opacity: 0;
+		z-index: 1;
+	}
+	
+	50%, 100% {
+		opacity: 1;
+		z-index: 5;
+	}
+}
+
+.overlay-container {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	width: 50%;
+	height: 100%;
+	overflow: hidden;
+	transition: transform 0.6s ease-in-out;
+	z-index: 100;
+}
+
+.overlay {
+	background: #e91640;
+	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
+	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: 0 0;
+	color: #FFFFFF;
+	position: relative;
+	left: -100%;
+	height: 100%;
+	width: 200%;
+  	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
 }
 
 
-.border{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-position: absolute;
-width: 630px;
-height: 223px;
-left: 380px;
-top: 250px;
-
-
-background:#fbfdfd;
-mix-blend-mode: normal;
-opacity: 0.85;
-border-radius: 20px; 
-}
-.signupimage{
-position: absolute;
-	width: 118px;
-	height: 121.91px;
-    left: 106px;
-	top: 10px;
-    border-radius: 95px;
-}
-.loginimage{
-    position: absolute;
-    width: 200px;
-    height: 121.9px;
-    right: 15px;
-    top: 20px;
-    border-radius: 95%;
-    
+.overlay-panel {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0 40px;
+	text-align: center;
+	top: 0;
+	height: 100%;
+	width: 50%;
+	transform: translateX(0);
+	transition: transform 0.6s ease-in-out;
 }
 
-.login button{
-    position: absolute;
-width: 189px;
-height: 56px;
-right: 72px;
-top: 144px;
-/* bottom: 100px; */
 
-background: #081C15;
-border-radius: 95px;
-color: #ef6454;
-font-family: Bai Jamjuree;
-font-style: italic;
-font-weight: bold;
-font-size: 20px;
+.overlay-right {
+	right: 0;
+	transform: translateX(0);
 }
-.signup button:hover{
-    background-color: #EEEEEE;
-    font-size: 28px;
-    border-color:#EEEEEE ;
 
-}
-.signup button{
-    position: absolute;
-width: 189px;
-height: 56px;
-left: 72px;
-top: 144px;
-/* bottom: 100px; */
-
-background: #081C15;
-border-radius: 95px;
-color: #ef6454;
-font-family: Bai Jamjuree;
-font-style: italic;
-font-weight: bold;
-font-size: 20px;
-}
-.login button:hover{
-    background-color:#EEEEEE;
-    font-size: 28px;
-    border-color:#EEEEEE ;
+.navbar-brand {
+    float: left;
+    height: 50px;
+    padding: 0;
+    font-size: 18px;
+    line-height: 20px;
 }
