--- a/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.css
+++ b/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.css
@@ -1,21 +1,17 @@
+
+.container{
+    height: auto;
+    width: 10000%;
+    background-image: url("https://www.pixelstalk.net/wp-content/uploads/2016/11/Education-hd-backgrounds.jpg");
+   
+}
 .instcontainer-fluid{
     text-align: center;
-    background-color:darkmagenta;
+    background-color:rgb(3, 3, 3);
     color: white;
     width: 100%;
     
 }
-#academyHeader{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height:50px;
-    background-color:darkmagenta;
-   
-    
-  
-  }
   h2{
     margin-left: 20px;
   }
@@ -31,13 +27,6 @@
     
     
   }
-  ul li button{
-    cursor: pointer;
-    border: none;
-    background: none;
-    font-size: medium;
-    
-  }
   #logout{
     cursor: pointer;
     border: none;
@@ -45,15 +34,16 @@
     margin-right:20px ;
     
   }
+  .input-group{
+    flex-direction: row;
+    width: 60%;
+    margin-left: 25%;
+}
 .instEnroll{
     margin-left: 80%;
 }
 .instlogout{
     margin-left: 80%;
-}
-.instsearch{
-    text-align: center;
-    margin-left: 50%;
 }
 .instsubmit{
     background-color: darkmagenta;
@@ -77,7 +67,67 @@ input[type=text] {
       padding-bottom: 10px;
       margin-bottom: 10px;
       margin-top: 5px;
+      box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   }
 .instbtn1{
     margin-left: 85%;
-};
+}
+
+.button {
+  font-family:'Open Sans';
+  font-size: 20px;
+  font-weight:400;
+  display:inline-block;
+  color:#FFF;
+  border-radius: .25em;
+  text-shadow: -1px -1px 0px rgba(0,0,0,0.4);
+  text-align: center;
+  margin-left: 2ex;
+}
+.inlineIcon {}
+ .enroll:before {
+  font-family: FontAwesome;
+  display: inline-block;
+  font-size:1rem;
+  padding-right:12px;
+  background:none;
+  color:#FFF;
+}
+.inlineIcon.enroll {
+  background: transparent;
+}
+
+.inlineIcon.enroll:before {
+  line-height:32px;
+  font-size:32px;
+  padding:4px 0px;
+} 
+
+
+.primary:hover{
+  transform:scale(1.02);
+  box-shadow:2px 2px 5px rgba(0,0,0,0.20), inset 0 0 0 99999px rgba(0,0,0,0.2);
+}
+.primary {
+  line-height:40px;
+  transition:ease-in-out .2s;
+  padding: 0 16px;
+}
+.enroll {
+  background: rgb(192, 57, 43);
+  
+
+}
+
+.inlineIcon.enroll:before {
+    color:rgb(192, 57, 43);
+}
+.card {
+  background: #fff;
+  border-radius: 2px;
+  display: inline-block;
+  height: 300px;
+  margin: 1rem;
+  position: relative;
+  width: 300px;
+}
